Aggiornamento a Spring Boot 4.0.5 e altre dipendenze. Modifica della logica di aggregazione delle assenze e introduzione di nuovi test.